tests/cases/fail/json_from_string_non_class.p4
import json


def main() -> None:
    value = json.from_string[char]("\"x\"")
    print(value)
